# LittleIron

./: .gitignore  CMakeLists.txt  README.md
src/: iron.h  iron_asset.c  iron_asset.h  iron_entity.c  iron_entity.h  iron_main.c  iron_math.c  iron_math.h  iron_render.c  iron_render.h  iron_render_window.c  iron_render_window.h  iron_types.h  iron_util.c  iron_util.h  iron_window.c  iron_window.h
